# GB_Emulator_forkv2

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DoxygenConfig  README.md  footer.html  vcpkg.json
.github/: pull_request_template.md
.github/workflows/: static.yml  test-init-response-protocol.yml
Pipeline/: SetUp.md
documentation/html/: ProcessingUnit_8cpp_source.html  ProcessingUnit_8hpp_source.html  annotated.html  annotated_dup.js  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-actions_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-cardinalities_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-function-mocker_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-matchers_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-more-actions_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-more-matchers_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-nice-strict_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-spec-builders_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2internal_2custom_2gmock-generated-actions_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2internal_2custom_2gmock-matchers_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2internal_2custom_2gmock-port_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2internal_2gmock-internal-utils_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2internal_2gmock-port_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2internal_2gmock-pp_8h_source.html  build_2__deps_2googletest-src_2googlemock_2test_2gmock-matchers__test_8h_source.html  build_2__deps_2googletest-src_2googlemock_2test_2gmock__link__test_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-assertion-result_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-death-test_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-matchers_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-message_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-param-test_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-printers_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-spi_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-test-part_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-typed-test_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest__pred__impl_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest__prod_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2custom_2gtest-port_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2custom_2gtest-printers_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2custom_2gtest_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2gtest-death-test-internal_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2gtest-filepath_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2gtest-internal_8h_source.html  build_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2gtest-param-util_8h_source.html  (+1408 more)
documentation/latex/: ProcessingUnit_8cpp_source.tex  ProcessingUnit_8hpp_source.tex  annotated.tex  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-actions_8h_source.tex  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-cardinalities_8h_source.tex  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-function-mocker_8h_source.tex  build_2__deps_2googletest-src_2googlemock_2test_2gmock-matchers__test_8h_source.tex  (+767 more)
include/: CMakeCache.txt  ProcessingUnit.hpp  apu.hpp  audio_stream.hpp  cartridge.h  cartridge.hpp  cb_opcodes.hpp  common.hpp  emulator.hpp  interrupt_controller.hpp  mmu.hpp  opcode_table.hpp  opcodes.hpp  ppu.hpp  processingUnit.hpp  readROM.hpp  success.hpp  timer.hpp
pipline/: SetUp.md
src/: main.cpp
tests/: CMakeLists.txt  ProcessingUnitTest.cpp  apu_tests.cpp  cartridge_tests.cpp  interrupt_controller_tests.cpp  mmu_tests.cpp  op_0x0_tests.cpp  op_ld_tests.cpp  ppu_tests.cpp  sanity_tests.cpp  timer_tests.cpp
tests/op_tests/: cb_op_00_tests.cpp  cb_op_01_tests.cpp  cb_op_02_tests.cpp  cb_op_03_tests.cpp  cb_op_04_tests.cpp  cb_op_05_tests.cpp  cb_op_06_tests.cpp  cb_op_07_tests.cpp  cb_op_08_tests.cpp  cb_op_09_tests.cpp  cb_op_0A_tests.cpp  cb_op_0B_tests.cpp  cb_op_0C_tests.cpp  cb_op_0D_tests.cpp  cb_op_0E_tests.cpp  cb_op_0F_tests.cpp  op_00_tests.cpp  op_01_tests.cpp  op_02_tests.cpp  op_03_tests.cpp  op_04_tests.cpp  op_05_tests.cpp  op_06_tests.cpp  op_07_tests.cpp  op_08_tests.cpp  op_09_tests.cpp  op_0A_tests.cpp  op_0B_tests.cpp  op_0C_tests.cpp  op_0D_tests.cpp  op_0E_tests.cpp  op_0F_tests.cpp  op_0x0_tests.cpp  op_0x1_tests.cpp  op_0x3_tests.cpp
utility_scripts/: breakpoints.txt  build_and_run.sh  build_and_test.sh  clean_savestates.sh  create_issues.sh  create_production_roadmap_issues.sh  groq_push_summary.py  make_cb_opcode_skeleton.sh  make_opcode_skeleton.sh  opcode_docs.sh  opcode_lookup.py  opcode_progress.py  run_debug.sh  run_game.sh  send_discord_messages.py  valgrind_tests.sh
(+135 files in other folders)
